<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <TextView android:text="@string/greeting" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button"
        android:onClick="startClick"
        android:background="@drawable/button_effect"
        android:layout_above="@+id/review_button"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button_effect"
        android:gravity="center"
        android:onClick="optionsClick"
        android:text="@string/options" />

    <Button
        android:id="@+id/review_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/options_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button_effect"
        android:gravity="center"
        android:onClick="reviewClick"
        android:text="@string/review_button_title" />

</RelativeLayout>
