<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <TextView android:text="@string/options_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/option_title_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="186dp"
        android:textColor="@color/text_color" />
    <EditText
        android:inputType="textUri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/url_input_field"
        android:layout_below="@+id/option_title_view"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/confirm_option_button"
        android:layout_below="@+id/url_input_field"
        android:layout_centerHorizontal="true"
        android:onClick="optionsClick"
        android:background="@drawable/button_effect"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_title"
        android:id="@+id/back_button"
        android:layout_below="@+id/confirm_option_button"
        android:background="@drawable/button_effect"
        android:layout_centerHorizontal="true"
        android:onClick="backClick" />

</RelativeLayout>
