<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/relativeResultLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_button_title"
            android:id="@+id/restartButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:background="@drawable/button_effect"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_button_title"
            android:id="@+id/review_button"
            android:background="@drawable/button_effect"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/timeView"
            android:inputType="text"
            android:textSize="17dp"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/stdDevView"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/averageTimeView"
            android:inputType="text"
            android:textSize="17dp"
            android:layout_marginLeft="0dp"
            android:layout_above="@+id/restartButton"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/stdDevView"
            android:inputType="text"
            android:textSize="17dp"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/averageTimeView"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/result_activity_title"
            android:id="@+id/finishTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/averageDifficultyView"
            android:textSize="17dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/timeView"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/percentView"
            android:inputType="text"
            android:textSize="17dp"
            android:layout_below="@+id/finishTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/typeLinearLayout"
            android:layout_above="@+id/averageDifficultyView"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/percentView"
            android:layout_toEndOf="@+id/restartButton"
            android:layout_alignParentStart="true"></LinearLayout>
    </RelativeLayout>
</ScrollView>